Squashed beta-1.5.7-premapmove01
commit 492e84f7ee5b611dc6a9839176f28ea8a8cbf84b
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Feb 20 19:51:16 2016 +0100

    format translation

commit a976712ea780ac032f863451b03b28507c3f69c1
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Feb 20 19:47:26 2016 +0100

    log map moves

commit 9d24fcdd3eb97775a6615fbbbcbefacfe32a39fa
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Feb 20 19:43:47 2016 +0100

    Fix new node size calculation for nodes moved in scripts

commit 5f5d61ec99650a26a57a4dbed4109fe9b120a37f
Merge: d59902a be88a0a
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Fri Feb 19 21:15:15 2016 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit d59902aa65d1b132afe21afdae87896811f6f89d
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Fri Feb 19 21:15:00 2016 +0100

    Fix MapProxy

commit 4ed6e3252a310cd1a45b359d6f6aefabc82e3b60
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Fri Feb 19 21:00:26 2016 +0100

    Fix map move on changes of viewport size change

commit 247fc9bf7b60b10d85db40b4397fe6427554a441
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Fri Feb 19 20:43:44 2016 +0100

    Update documentation maps to the last version

commit 616306f5874a335910dd986d6560bf3e3ead2d90
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Fri Feb 19 20:36:01 2016 +0100

    Fix NPE on map loading

commit be88a0a1b21ccb56070cf26f2c0e7df261684c12
Author: Predrag Cuklin <pcuklin@gmail.com>
Date:   Wed Feb 17 11:39:49 2016 +0100

    Translated using Weblate (Croatian)

    Currently translated at 100.0% (1930 of 1930 strings)

commit 6f1c9c3a6b6493a8c58494999ff84b0a488870bb
Author: Ldm Public <ldmpub@gmail.com>
Date:   Sun Feb 14 21:25:18 2016 +0100

    Translated using Weblate (French)

    Currently translated at 99.5% (1921 of 1930 strings)

commit 0d4e919ce6bc8f506c04b4a43e069de08cec6285
Author: Pedro Albuquerque <pa1@live.com.pt>
Date:   

--- a/freeplane/resources/translations/Resources_da.properties
+++ b/freeplane/resources/translations/Resources_da.properties
@@ -96,6 +96,7 @@ attribute_delete_value=Slet denne v\u00E6rdi
 attribute_font_size_tooltip=Attribut skriftst\u00F8rrelse
 attribute_list_box_label_text=Eksisterende v\u00E6rdier
 attribute_name=Attributnavn
+attribute_name_or_value=Attributnavn eller v\u00E6rdi
 attribute_replace=Erstat med
 attribute_top=Alle kendte attributter for de indl\u00E6ste MindMaps
 attribute_value=Attributv\u00E6rdi
@@ -140,6 +141,7 @@ automatically_save_message=Mindmap blev automatisk gemt (med filnavnet {0}) \u20
 AutomaticEdgeColor.FOR_BRANCHES=for grene
 AutomaticEdgeColor.FOR_COLUMN=for kolonne
 AutomaticEdgeColor.FOR_COLUMNS=for kolonner
+AutomaticEdgeColor.FOR_LEVELS=for niveauer
 AutomaticEdgeColor.ON_BRANCH_CREATION=Ved skabelse af gren
 AutomaticEdgeColorHookAction.text=Automatisk kantfarve
 AutomaticLayout.ALL=for alle knudepunkter
@@ -150,6 +152,7 @@ AutomaticLayout.level.root=Roden
 AutomaticLayoutAction.text=Anvend niveau typografier
 AutomaticLayoutAction.tooltip=<html>Fasts\u00E6tter layoutet af MindMap.<br>Det f\u00F8rste niveau er sort, det andet bl\u00E5, osv.</html>
 AutomaticLayoutControllerAction.ALL.text=for alle knudepunkter
+AutomaticLayoutControllerAction.COLUMNS.text=for kolonner
 AutomaticLayoutControllerAction.HEADINGS.text=for ikke blad knudepunkter
 AutomaticLayoutControllerAction.null.text=deaktiveret
 BackAction.text=G\u00E5 bagl\u00E6ns
@@ -166,10 +169,12 @@ branch=Forgrening
 browse=Gennemse\u2026
 calendar_attributes_panel=Kalender og attributter
 calendar_panel=Kalender
+can_not_clone_encrypted_node=Kan ikke klone krypterede noder
 can_not_connect_to_info_server=Kan ikke forbinde til information server
 can_not_delete_predefined_style=Kan ikke slette foruddefineret stil
 can_not_delete_root_style=Kan ikke slette rod typografi
 can_not_delete_style_group=Kan ikke slette stilgruppe
+can_not_encrypt_cloned_node=Kan ikke kryptere klonede noder
 can_not_save_key_set=Kan ikke gemme genvejstaster
 cancel=&Annuller
 CancelAction.text=&Annuller
@@ -177,6 +182,7 @@ cannot_add_parent_diff_parents=Alle knudepunkter skal have samme overknudepunkt 
 cannot_add_parent_to_root=Rod knudepunkt kan ikke tilf\u00F8jes til en ny overknudepunkt.
 cannot_delete_root=Rodknudepunkt kan ikke slettes eller klippes.
 cannot_join_nodes_with_children=Kan ikke forbinde knudepunkter med underknudepunkter
+cannot_move_into_child_node=Kan ikke flytte til underordnet node
 cannot_move_to_child=Kan ikke flytte et knudepunkt til en af dens underknudepunkter.
 CenterAction.text=Centrer
 CenterSelectedNodeAction.text=Centrer valgte knudepunkt
@@ -201,6 +207,7 @@ choose_node_background_color=V\u00E6lg knudepunktsbaggrundsfarve:
 choose_node_color=V\u00E6lg knudepunktsfarve:
 ClearLinkAnchorAction.text=Ryd link anker
 ClearLinkAnchorAction.tooltip=<html>slet tidligere angivet knudepunktsanker</html>
+CloneAction.text=Inds\u00E6t som klon
 close_btn=Luk
 CloseAction.text=Luk aktuelle MindMap
 CloudAction.text=Tilf\u00F8j/fjern sky(standard)
@@ -269,7 +276,9 @@ edge=Kant
 edge_is_formatted_by_style=Kantformat styres af stil. Rediger relaterede typografier hvis det er n\u00F8dvendigt.
 edge_style=Kant stil
 edge_width=Kantbredde
+edge_widths=Kantbredder
 EdgeColorAction.text=Kant farve\u2026
+EdgeProperties=Kantegenskaber
 EdgeStyleAction.bezier.text=J\u00E6vnt bue (bezier)
 EdgeStyleAction.bezier.tooltip=<html>Vis kanten som en j\u00E6vn kurve.</html>
 EdgeStyleAction.hide_edge.text=Skjul kant
@@ -312,7 +321,9 @@ EditScript=Rediger skript\u2026
 EditStylesAction.text=Rediger typografier
 EncryptedMap.text=Nyt beskyttet (krypteret) MindMap\u2026
 EncryptedMap.tooltip=Nyt beskyttet MindMap
+encryption=Kryptering
 enter_base_url=Freeplane vil inds\u00E6tte relative links. Indtast basis URL.
+enter_command=Indtast kommando
 enter_condition_name=Indtast nyt betingelsesnavn
 enter_confirms=Enter bekr\u00E6fter
 enter_keyset_name=Indtaste navn for  genvejstaster
@@ -326,6 +337,7 @@ error_applying_template=Fejl ved anvendelse af XSL template.
 error_creating_directory=Kan ikke oprette skuffen til eksport.
 error_in_template=Fejl i standard MapMind skabelon {0}. Pr\u00F8v at fjerne filen.
 errornumber={0} fejl
+ExecuteScript.available_modes_tooltip={0} er tilg\u00E6ngelig for
 ExecuteScriptError.text=Fejl ved k\u00F8rsel af skript\n{0}
 ExecuteScriptForAllNodes.text=Udf\u00F8r alle skripts
 ExecuteScriptForSelectionAction.text=Udf\u00F8r valgte knudepunkts skripts
@@ -442,7 +454,11 @@ filter_selected_node_view_snapshot=Gemt markering
 filter_style=Typografi
 filter_time=Datofilter
 FilterComposerDialog.save=&Gem
+FilterCondition=Filterbetingelser
+filterConditions=Brugerdefineret filtre
+filterConditions.noActions=Ingen navngivne filtre
 filters_not_loaded=Filteret kunne ikke indl\u00E6ses, fil beskadiget
+find=S\u00F8g
 find_what=Find hvad
 FindAction.text=S\u00F8g\u2026
 fit_map_to_page=Tilpas til \u00E9n side
@@ -650,6 +666,7 @@ IconProgressIconUpAction.text=\u00D8g fremskridt
 IconProgressIconUpAction.tooltip=Reducerer/inds\u00E6t udviklingsikon (0%-> 25%-> 50%-> 75%-> 100% + OK).
 IconProgressRemoveAction.text=Fjern udviklingsikon
 IconProgressRemoveAction.tooltip=Fjerner udvikllingsikoner og udvidede udvikllingsikon.
+icons=Ikoner
 IconSelectionPlugin.text=V\u00E6lg icon...
 IconSelectionPlugin.tooltip=<html>Her kan du v\u00E6lge en icon via et undervindue.</html>
 image_covertLink=Konvertere link til billede
@@ -663,6 +680,7 @@ ImportFolderStructureAction.text=Mappestruktur\u2026
 ImportLinkedBranchAction.text=Linked forgrening
 ImportLinkedBranchWithoutRootAction.text=Sammenk\u00E6det gren &uden rod\u2026
 ImportMindmanagerFiles.text=MindManager X5 MindMap\u2026
+ImportXmlFile.text=Importer XML-fil
 increase_branch_font_size=St\u00F8rre skrifttype
 IncreaseNodeFontAction.text=St\u00F8rre skrifttype
 internal_error_tooltip=Der opstod interne fejl. Klik for at \u00E5bne den seneste logfil log.0 for flere detaljer.
@@ -674,6 +692,7 @@ invalid_url_msg=Kunne ikke oprette gyldig URL for {0}
 ItalicAction.text=Kursiv
 italicise_branch=Kursiv\u00E9r
 java_version=Java-version: {0}
+lastOpenedMaps=Seneste MindMap
 latex_editor=Rediger LaTeX formel
 LatexDeleteLatexAction.text=Fjern LaTe&X-formular
 LatexEditLatexAction.text=Redig\u00E9r &LaTeX-formular...
@@ -702,6 +721,7 @@ locking_old_lock_removed=MindMap {0} blev l\u00E5st af brugeren {1}. L\u00E5sen 
 long_node_changed_cancel=Du har \u00E6ndret knudepunktet. Slet \u00E6ndringer?
 long_node_changed_submit=Du har \u00E6ndret knudepunktet. Slet \u00E6ndringer?
 lots_of_links_warning=Du er ved at oprette en masse links til samme knudepunkt. Vil du oprette disse links?
+main_menu=Menu
 main_resource_directory=Installation ressourcer: {0}
 MainView.errorUpdateText=Fejl ved indstilling af teksten for f\u00F8lgende input: {0}.
 MakeLinkFromAnchorAction.text=Lav link fra anker
@@ -743,12 +763,15 @@ ManageAddOnsDialog.visit.addon.page=Bes\u00F8g tilf\u00F8jelse side\u2026
 ManageConditionalStylesAction.text=Ad&ministrer betingede typografier for MindMap
 ManageNodeConditionalStylesAction.text=&Administrer betingede typografier for knudepunkter
 map_already_exists=MindMap findes allerede. Vil du overskrive?
+map_background_image=Baggrundsbillede
 map_corrupted=MindMap beskadiget. Se detaljer?
 map_load_error=Kunne ikke indl\u00E6se MindMap {0}
 map_locked_by_open=MindMap {0} er allerede ved at blive redigeret af brugeren {1}. \u00C5ben som skrivebeskyttet.
 map_locked_by_save_as=MindMap {0} redigeres af brugeren {1}. Gem som handling afbrudt.
 map_not_saved=MindMap er ikke gemt endnu.
 MapBackgroundColorAction.text=MindMap baggrundsfarve
+MapBackgroundImageAction.text=Baggrundsbillede\u2026
+maps=Mindmaps
 MaxNodeWidth.text=Angiv maksimal knudepunktsbredde
 menu_applyStyle=Anvend typografi
 menu_attributes=Atributter
@@ -800,6 +823,7 @@ ModesMenuAction.Browse.text=MindMap browser
 ModesMenuAction.File.text=Filh\u00E5ndtering
 ModesMenuAction.MindMap.text=MindMap editor
 most_recent_files=Seneste MindMap
+MoveAction.text=Flyt
 MoveToRootAction.text=G\u00E5 til roden
 NameConditionAction.text=Angiv navn
 navigate=Naviger
@@ -881,6 +905,10 @@ not_saved_for_image_error=MindMap skal gemmes, f\u00F8r du kan angive et billede
 not_saved_for_link_error=MindMap skal gemmes, f\u00F8r du kan angive et link med filh\u00E5ndtering
 note_window_location=Notepanel placering
 notes=Note
+NotificationOptions.CLOSE=Luk
+NotificationOptions.REMIND_ME_LATER=P\u00E5mind senere
+NotificationOptions.REMOVE_REMINDER=Fjern p\u00E5mindelse
+NotificationOptions.SELECT_NODE=G\u00E5 til p\u00E5mindelse
 ok=&OK
 OKAction.text=&OK
 OnlineReference.text=Online MindMap dokumentation
@@ -1059,6 +1087,7 @@ OptionPanel.il__enter_confirms_by_default=Enter bekr\u00E6fter som standard
 OptionPanel.image_cache=for billeder
 OptionPanel.it=Italiensk/Italiano
 OptionPanel.ja=Japansk/\u65E5\u672C\u8BED
+OptionPanel.JoinNodesAction.textSeparators=Tekstseparator
 OptionPanel.key_type_action=Ved tastetryk
 OptionPanel.Keystrokes=Tastetryk
 OptionPanel.ko=Koreansk/\uD55C\uAD6D\uC5B4 (\u97D3\u570B\u8A9E), \uC870\uC120\uB9D0 (\u671D\u9BAE\u8A9E)
@@ -1162,6 +1191,9 @@ OptionPanel.rectangle=Rektangel
 OptionPanel.relative=Relativ
 OptionPanel.remind_type_of_new_nodes.tooltip=<html>"Sp\u00F8rg" vil sp\u00F8rge dig (brug i tvivl).<br>"Ja" viser rich text-editoren.<br>"Nej" vises teksteditor.</html>
 OptionPanel.remind_use_rich_text_in_new_nodes=Bruge RTF for indsatte knudepunktet
+OptionPanel.remindersBlink=P\u00E5mindelser blink
+OptionPanel.remindersShowNotifications=P\u00E5mindelser viser meddelelsespopups
+OptionPanel.remindersStandardDelay=P\u00E5mindelse forsinkelse
 OptionPanel.remove_notes_without_question=Fjern noter uden at sp\u00F8rge?
 OptionPanel.remove_notes_without_question.tooltip=Hvis dette afkrydsningsfelt er fjernet noter tilh\u00F8rer de markerede knudepunktet\n uden bekr\u00E6ftelse. Dette kan medf\u00F8re tab af oplysninger, hvis der trykkes p\u00E5 uden hensigt.
 OptionPanel.resources_use_default_font_for_notes_too=Brug standardskrifttype for noter
@@ -1236,6 +1268,7 @@ OptionPanel.separator.other_defaults=Andre standarter
 OptionPanel.separator.others=Andre tastebindinger
 OptionPanel.separator.outline_view=Dispositionsvisning
 OptionPanel.separator.patterns=M\u00F8nstre
+OptionPanel.separator.reminderOptions=P\u00E5mindelsesindstillinger
 OptionPanel.separator.RichTextEditor=Rich-Text editor
 OptionPanel.separator.root_node_appearance=Rod knudepunkt format
 OptionPanel.separator.save=Gem
@@ -1284,6 +1317,7 @@ OptionPanel.spelling_opt_ignore_capitalization=Ignorer ord der begynder med vers
 OptionPanel.spelling_opt_ignore_words_with_numbers=Ignorer ord med tal
 OptionPanel.spelling_opt_suggestions_limit_dialog=Maksimale antal forslag i dialogen
 OptionPanel.spelling_opt_suggestions_limit_menu=Maksimale antal forslag i menuen
+OptionPanel.SplitToWordsAction.charactersAcceptedInWord=tegn i ord
 OptionPanel.sr=Serbisk/\u0441\u0440\u043F\u0441\u043A\u0438
 OptionPanel.standard_template=Standard skabelonfil
 OptionPanel.standardbackgroundcolor=Standard baggrundsfarve
@@ -1508,6 +1542,7 @@ scripting_api_generator_proxy=Proxy
 scripting_api_generator_title=Skripting API
 scripting_api_generator_utilities=Hj\u00E6lpeprogrammer
 scripting_api_generator_web=Webressourcer
+ScriptsRunToggleAction.ON_SELECTED_NODE_RECURSIVELY.text=Udf\u00F8r skripts p\u00E5 markerede noder, rekursivt
 select_favorites_folder=V\u00E6lg mappen, med dine favoritter
 select_file_export_to=V\u00E6lg fil at eksporterer til
 select_folder_for_importing=V\u00E6lg mappen som skal importeres
@@ -1784,6 +1819,12 @@ TimeListAction.text=Vis tidsskema listen...
 TimeListAction.tooltip=Vis alle skemalagte tider og de tilh\u00F8rende knudepunkter.
 TimeManagementAction.text=Vis kalender...
 TimeManagementAction.tooltip=<html>Viser kalendermodulet af Kai Toedter.</html>
+TimePeriodUnits.days=dage
+TimePeriodUnits.hours=timer
+TimePeriodUnits.minutes=minutter
+TimePeriodUnits.ms=ms
+TimePeriodUnits.seconds=sekunder
+TimePeriodUnits.weeks=uger
 ToggleChildrenFoldedAction.text=Fold underknudepunkter ind/ud
 ToggleDetailsAction.text=Skjule detaljer
 ToggleFBarAction.text=F-tasten
@@ -1832,11 +1873,13 @@ user_defined_zoom_status_bar=\u00C6ndre zoom til brugerdefinerede zoomv\u00E6rdi
 user_icon=Brugerikonet "{0}"
 user_template_dir=Brugerskabeloner
 user_zoom=Udskriv zoomfaktor (0.0 - 2.0):
+userScripts=Skripts
 value_format=V\u00E6rdiformat
 version_up_to_date=Du bruger allerede den nyeste programversion
 view=Vis
 ViewerControllerAction.text=Eksternt objekt\u2026
 ViewLayoutTypeAction.OUTLINE.text=Dispositionsvisning
+web_resources=Webressourcer
 WebDocuAction.text=Web Dokumentation
 width=Bredde
 wrong_regexp=Forkert regul\u00E6rt udtryk "{0}", fejl {1}
@@ -1850,5 +1893,6 @@ xslt_export.ms_word=Microsoft Word 2003 XML
 xslt_export.text=Br\u00F8dtekst
 xslt_export_not_possible=Freeplane XSLT eksportering er ikke mulig
 yes=Ja
+zoom=Zoom
 ZoomInAction.text=Zoom ind
 ZoomOutAction.text=Zoom ud
