--- a/freeplane/resources/translations/Resources_fr.properties
+++ b/freeplane/resources/translations/Resources_fr.properties
@@ -170,10 +170,12 @@ branch=Branche
 browse=Ouvrir...
 calendar_attributes_panel=Calendrier et attributs
 calendar_panel=Calendrier
+can_not_clone_encrypted_node=Impossible de cloner des noeuds s\u00E9curis\u00E9s
 can_not_connect_to_info_server=Impossible de se connecter au serveur
 can_not_delete_predefined_style=Impossible de supprimer un style syst\u00E8me.
 can_not_delete_root_style=Impossible de supprimer le style du n\u0153ud racine
 can_not_delete_style_group=Impossible de supprimer ce type de style
+can_not_encrypt_cloned_node=Impossible de cloner des noeuds prot\u00E9g\u00E9s
 can_not_save_key_set=Impossible d'enregistrer les touches de fonction
 cancel=Annuler
 CancelAction.text=Annuler
