--- a/freeplane/resources/translations/Resources_hr.properties
+++ b/freeplane/resources/translations/Resources_hr.properties
@@ -169,17 +169,20 @@ branch=Grana
 browse=Pregled...
 calendar_attributes_panel=Kalendar i Obilje\u017Eja
 calendar_panel=Kalendar
+can_not_clone_encrypted_node=Ne mogu klonirati \u0161ifrirane \u010Dvorove
 can_not_connect_to_info_server=Ne mogu se spojiti na poslu\u017Eitelj
 can_not_delete_predefined_style=Ne mogu obrisati unaprijed postavljeni stil
 can_not_delete_root_style=Ne mogu obrisati korijenski stil
 can_not_delete_style_group=Ne mogu obrisati grupu stila
+can_not_encrypt_cloned_node=Ne mogu \u0161ifrirati klonirane \u010Dvorove
 can_not_save_key_set=Nije mogu\u0107e pohraniti grupu tipkovni\u010Dkih kratica
 cancel=&Odustani
 CancelAction.text=&Odustani
 cannot_add_parent_diff_parents=Svi \u010Dvorovi moraju imati istog Roditelja za kori\u0161tenje ove funkcije.
 cannot_add_parent_to_root=Korijenski \u010Dvor nije mogu\u0107e dodati novom Roditelju.
 cannot_delete_root=Korijenski \u010Dvor nije mogu\u0107e obrisati ili izrezati.
-cannot_join_nodes_with_children=\u010Cvorove nije mogu\u0107e povezati s Djecom
+cannot_join_nodes_with_children=\u010Cvorove nije mogu\u0107e pridru\u017Eiti s Djecom
+cannot_move_into_child_node=\u010Cvor nije mogu\u0107e pomaknuti u \u010Dvor Dijete
 cannot_move_to_child=\u010Cvor nije mogu\u0107e pomaknuti prema \u010Dvoru njegove Djece.
 CenterAction.text=Sredina
 CenterSelectedNodeAction.text=Odabrani \u010Dvor u centru prikaza
@@ -698,6 +701,7 @@ invalid_url_msg=Ne mogu stvoriti valjanu URL adresu za {0}
 ItalicAction.text=Uko\u0161eno
 italicise_branch=Ukositi
 java_version=Verzija Java: {0}
+JoinNodesAction.separator.format=Pridru\u017Ei \u010Dvorove s "{0}"
 lastOpenedMaps=Nedavno kori\u0161tene mape
 lastOpenedMaps.noActions=Nema mapa u popisu povijesti
 latex_editor=Uredi LaTeX formulu
@@ -1096,8 +1100,10 @@ OptionPanel.id=Indonezijski
 OptionPanel.IGNORE=Ne \u010Dini ni\u0161ta
 OptionPanel.il__enter_confirms_by_default="Enter" kao standardna potvrda unosa
 OptionPanel.image_cache=Za slike
+OptionPanel.indentationUsesTabsInTextOutput=Koristi tabulator u izlaznom tekst
 OptionPanel.it=Talijanski
 OptionPanel.ja=Japanski
+OptionPanel.JoinNodesAction.textSeparators=Razdjelnik teksta
 OptionPanel.key_type_action=Unos tipkovnicom
 OptionPanel.Keystrokes=Tipkovni\u010Dke kratice
 OptionPanel.ko=Korejski
@@ -1259,6 +1265,7 @@ OptionPanel.separator.icon_properties=Ikone
 OptionPanel.separator.icons=Ikone u "Odaberi Ikonu..."
 OptionPanel.separator.initial_map_size=Po\u010Detna veli\u010Dina Mentalne mape
 OptionPanel.separator.inline_editor=Jednostavni ure\u0111iva\u010D \u010Dvora
+OptionPanel.separator.JoinNodesAction=Pridru\u017Eivanje \u010Dvorova
 OptionPanel.separator.key_typing=Tipkanje
 OptionPanel.separator.language=Jezik
 OptionPanel.separator.latex=LaTex
@@ -1304,6 +1311,7 @@ OptionPanel.shape_horizontal_margin=Vodoravna margina
 OptionPanel.shape_vertical_margin=Okomita margina
 OptionPanel.sharp_bezier=Grubo bezier
 OptionPanel.sharp_linear=Grubo linearno
+OptionPanel.shouldCenterSmallMaps=Centriranje male mape
 OptionPanel.show_icon_for_attributes=Prika\u017Ei ikone obilje\u017Eja
 OptionPanel.show_less_than_N_nodes_by_default_after_load=U\u010Ditaj iz mape ili rasklopi neke \u010Dvorove
 OptionPanel.show_node_tooltips=Prika\u017Ei opis alata za \u010Dvorove
