--- a/freeplane/resources/translations/Resources_pt_PT.properties
+++ b/freeplane/resources/translations/Resources_pt_PT.properties
@@ -170,10 +170,12 @@ branch=Ramo
 browse=Navegar...
 calendar_attributes_panel=Calend\u00E1rio e atributos
 calendar_panel=Calend\u00E1rio
+can_not_clone_encrypted_node=Imposs\u00EDvel clonar n\u00F3s encriptados
 can_not_connect_to_info_server=Imposs\u00EDvel estabelecer liga\u00E7\u00E3o ao servidor
 can_not_delete_predefined_style=Imposs\u00EDvel eliminar estilo predefinido
 can_not_delete_root_style=Imposs\u00EDvel eliminar estilo ra\u00EDz
 can_not_delete_style_group=Imposs\u00EDvel eliminar grupo de estilos
+can_not_encrypt_cloned_node=Imposs\u00EDvel encriptar n\u00F3s clonados
 can_not_save_key_set=Imposs\u00EDvel gravar conjunto de atalhos
 cancel=&Cancelar
 CancelAction.text=&Cancelar
