--- a/freeplane/resources/translations/Resources_ja.properties
+++ b/freeplane/resources/translations/Resources_ja.properties
@@ -177,6 +177,7 @@ cannot_add_parent_diff_parents=\u3059\u3079\u3066\u306E\u30CE\u30FC\u30C9\u304C\
 cannot_add_parent_to_root=\u30EB\u30FC\u30C8\u30CE\u30FC\u30C9\u306B\u65B0\u898F\u89AA\u30CE\u30FC\u30C9\u3092\u4ED8\u52A0\u3059\u308B\u3053\u3068\u306F\u3067\u304D\u307E\u305B\u3093\u3002
 cannot_delete_root=\u30EB\u30FC\u30C8\u30CE\u30FC\u30C9\u306E\u524A\u9664\u3084\u5207\u308A\u53D6\u308A\u306F\u3067\u304D\u307E\u305B\u3093\u3002
 cannot_join_nodes_with_children=\u5B50\u30CE\u30FC\u30C9\u4ED8\u304D\u306E\u30CE\u30FC\u30C9\u306F\u7D71\u5408\u3067\u304D\u307E\u305B\u3093\u3002
+cannot_move_into_child_node=\u5B50\u30CE\u30FC\u30C9\u3078\u306E\u79FB\u52D5\u306F\u3067\u304D\u307E\u305B\u3093
 cannot_move_to_child=\u30CE\u30FC\u30C9\u306F\u81EA\u5206\u306E\u5B50\u30CE\u30FC\u30C9\u306B\u79FB\u52D5\u3067\u304D\u307E\u305B\u3093\u3002
 CenterAction.text=\u9078\u629E\u4E2D\u306E\u30D5\u30A9\u30EB\u30C0\u3092\u4E2D\u5FC3\u306B\u8868\u793A
 CenterSelectedNodeAction.text=\u9078\u629E\u30CE\u30FC\u30C9\u3092\u4E2D\u592E\u3078
@@ -221,6 +222,7 @@ connector_label=\u30B3\u30CD\u30AF\u30BF\u306E\u30E9\u30D9\u30EB
 connector_lines=\u7DDA\u3000 \u7A2E
 connector_shapes=\u5F62\u3000 \u72B6
 ConnectorColorAction.text=\u30B3\u30CD\u30AF\u30BF\u306E\u8272...
+ConvertCloneToIndependentNodeAction.text=\u8907\u88FD\u306E\u4F5C\u6210
 CopyAction.text=\u30B3\u30D4\u30FC(&C)
 CopyAction.tooltip=\u9078\u629E\u4E2D\u306E\u679D\u3092\u30B3\u30D4\u30FC\u3057\u307E\u3059\u3002
 CopyAttributes.text=\u5C5E\u6027\u3092\u30B3\u30D4\u30FC(&A)
@@ -688,6 +690,7 @@ invalid_url_msg={0} \u306B\u95A2\u3057\u3066\u6709\u52B9\u306A URL \u3092\u4F5C\
 ItalicAction.text=\u659C\u4F53
 italicise_branch=\u659C\u4F53\u5316
 java_version=Java version: {0}
+JoinNodesAction.separator.format=\u30CE\u30FC\u30C9\u3092 "{0}" \u3067\u7D50\u5408
 lastOpenedMaps=\u6700\u8FD1\u4F7F\u3063\u305F\u30DE\u30C3\u30D7
 lastOpenedMaps.noActions=\u5C65\u6B74\u306A\u3057
 latex_editor=LaTeX \u6570\u5F0F\u3092\u7DE8\u96C6
@@ -1245,6 +1248,7 @@ OptionPanel.separator.icon_properties=\u30A2\u30A4\u30B3\u30F3
 OptionPanel.separator.icons=\u300C\u30A2\u30A4\u30B3\u30F3\u3092\u9078\u629E...\u300D\u306E\u30A2\u30A4\u30B3\u30F3
 OptionPanel.separator.initial_map_size=\u521D\u671F\u30DE\u30C3\u30D7\u30B5\u30A4\u30BA
 OptionPanel.separator.inline_editor=\u30A4\u30F3\u30E9\u30A4\u30F3\u30CE\u30FC\u30C9\u30A8\u30C7\u30A3\u30BF
+OptionPanel.separator.JoinNodesAction=\u30CE\u30FC\u30C9\u306E\u7D50\u5408
 OptionPanel.separator.key_typing=\u9078\u629E\u30CE\u30FC\u30C9\u3067\u306E\u30AD\u30FC\u5165\u529B
 OptionPanel.separator.language=\u8A00\u8A9E
 OptionPanel.separator.latex=LaTeX
