Squashed beta-1.5.7-pre02
commit 8e2387544b9ea3baf0bd909c28341e8afc8c7c38
Merge: 14d5e83 220e59c
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Feb 14 17:59:35 2016 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit 14d5e83f92effcf3fa80142e149a30ae4b31ba33
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Feb 14 17:59:25 2016 +0100

    Fix \n separator in join nodes

commit 959bcc309505df2eb322ea5685f9ec0009567115
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Feb 14 17:56:45 2016 +0100

    Can not encrypt cloned nodes

commit ffa03cd940d137ef24193c599e3843b9bb42c51a
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Feb 14 17:29:23 2016 +0100

    Encryption folds nodes on all views

commit d6990ee30ede107198238b478b9a026171e5d838
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Feb 14 12:03:42 2016 +0100

    [bugs:#2320] Encrypted Map Undo Bug

commit 220e59cd437a6f17c950f0eaf3cd7753294e3ded
Author: Pedro Albuquerque <palbuquerque73@gmail.com>
Date:   Sun Feb 14 09:09:36 2016 +0100

    Translated using Weblate (Portuguese (Portugal))

    Currently translated at 100.0% (1928 of 1928 strings)

commit e78f81364f80dadca6827ee8cd525e46159e51db
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Feb 13 23:50:10 2016 +0100

    Accelerator for joinNodesActions set in menu xml config

--- a/freeplane/resources/translations/Resources_pt_PT.properties
+++ b/freeplane/resources/translations/Resources_pt_PT.properties
@@ -181,6 +181,7 @@ cannot_add_parent_diff_parents=Todos os n\u00F3s devem ter o mesmo n\u00F3-m\u00
 cannot_add_parent_to_root=O n\u00F3-ra\u00EDz n\u00E3o pode ser adicionado a um novo n\u00F3-m\u00E3e.
 cannot_delete_root=O n\u00F3 ra\u00EDz n\u00E3o pode ser eliminado ou cortado.
 cannot_join_nodes_with_children=Imposs\u00EDvel juntar n\u00F3s com filhos
+cannot_move_into_child_node=Imposs\u00EDvel mover para n\u00F3 filho
 cannot_move_to_child=Imposs\u00EDvel mover um n\u00F3 para um dos seus filhos.
 CenterAction.text=Centrar
 CenterSelectedNodeAction.text=Centrar n\u00F3 selecionado
@@ -700,6 +701,7 @@ invalid_url_msg=Imposs\u00EDvel criar URL v\u00E1lido para {0}
 ItalicAction.text=It\u00E1lico
 italicise_branch=It\u00E1lico
 java_version=Vers\u00E3o Java: {0}
+JoinNodesAction.separator.format=Unir n\u00F3s com "{0}"
 lastOpenedMaps=Mapas mais recentes
 lastOpenedMaps.noActions=Sem mapas no hist\u00F3rico
 latex_editor=Editar f\u00F3rmula LaTex
@@ -1098,8 +1100,10 @@ OptionPanel.id=Indon\u00E9sio / Bahasa Indonesia
 OptionPanel.IGNORE=N\u00E3o fazer nada
 OptionPanel.il__enter_confirms_by_default=Por predefini\u00E7\u00E3o, Enter confirma
 OptionPanel.image_cache=para imagens
+OptionPanel.indentationUsesTabsInTextOutput=Usar tabula\u00E7\u00F5es em sa\u00EDda de texto
 OptionPanel.it=Italiano / Italiano
 OptionPanel.ja=Japon\u00EAs / \u65E5\u672C\u8A9E
+OptionPanel.JoinNodesAction.textSeparators=Separador de texto
 OptionPanel.key_type_action=Ao escrever
 OptionPanel.Keystrokes=Atalhos
 OptionPanel.ko=Coreano / \uD55C\uAD6D\uC5B4 (\u97D3\u570B\u8A9E), \uC870\uC120\uB9D0 (\u671D\u9BAE\u8A9E)
@@ -1262,6 +1266,7 @@ OptionPanel.separator.icon_properties=\u00CDcones
 OptionPanel.separator.icons=\u00CDcones em "Selecionar \u00EDcone..."
 OptionPanel.separator.initial_map_size=Tamanho inicial do mapa
 OptionPanel.separator.inline_editor=Editor em linha de n\u00F3s
+OptionPanel.separator.JoinNodesAction=Unir n\u00F3s
 OptionPanel.separator.key_typing=Escrever chave
 OptionPanel.separator.language=Idioma
 OptionPanel.separator.latex=LaTex
