--- a/freeplane/viewer-resources/translations/Resources_en.properties
+++ b/freeplane/viewer-resources/translations/Resources_en.properties
@@ -168,10 +168,12 @@ branch=Branch
 browse=Browse...
 calendar_attributes_panel=Calendar and attributes
 calendar_panel=Calendar
+can_not_clone_encrypted_node=Can not clone encrypted nodes
 can_not_connect_to_info_server=Can not connect to information server
 can_not_delete_predefined_style=Can not delete predefined style
 can_not_delete_root_style=Can not delete root style
 can_not_delete_style_group=Can not delete style group
+can_not_encrypt_cloned_node=Can not encrypt cloned nodes
 can_not_save_key_set=Can not save hot key set
 cancel=&Cancel
 CancelAction.text=&Cancel
