Squashed beta-1.5.8-pre01
commit eda678a62e366f13582144c0917183a55f347980
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Apr 10 22:32:27 2016 +0200

    Fix typo

commit 7f4fb4e02006a34d5e319de3680413a59b693f16
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Apr 10 22:15:08 2016 +0200

    Refactor ScriptClassLoader

commit 17358ddf7edcf9648bdbe90ec03119f5b21983b0
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Apr 10 22:10:09 2016 +0200

    History

commit e741a966fecb1da47196d60d38eae98c8ce2fd8b
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Apr 10 22:09:00 2016 +0200

    Version 1.5.8

commit 5d12bf61a3b09630e19fd73c89b60f8330ffe601
Author: Volker Boerchers <boercher@web.de>
Date:   Sun Apr 10 21:37:33 2016 +0200

    mention init scripts

commit be7215908b9a2d87e3a9a4d53ae5e78c74a3eaf2
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Apr 10 21:29:59 2016 +0200

    Allow scripts to always read properties

commit dbcfe3c20e7c3f428c39891d386b60d348ef9025
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Apr 10 21:18:46 2016 +0200

    Fix fwdir location

commit 81def85497b14d6f11c16e83e8c1baf8f2ec32a7
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Apr 10 20:58:36 2016 +0200

    grant codeBase "file:${user.home}/.p2/-" for debugging

commit 11bc0b2e44cfb0b807c96c874dd25d9f5c994fe7
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Apr 10 19:07:27 2016 +0200

    execute bug report submission as privileged action

commit 1b74000ba1996319d935449cf60d5fcd82eb5a88
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Apr 10 18:59:56 2016 +0200

    Fix windows installer script

commit 0ee6aef160140dd19c6c2e71588de8a221751604
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sun Apr 10 17:55:38 2016 +0200

    Fix some bugs related to security checks

commit 7d88585dfd029e48fe3e62ee8f0aa89e1f0b6271
Author: Volker Boerchers <boercher@web.de>
Date:   Sun Apr 10 14:55:03 2016 +0200

    added init script f

--- a/freeplane/resources/translations/Resources_ja.properties
+++ b/freeplane/resources/translations/Resources_ja.properties
@@ -140,6 +140,7 @@ automatic_layout=\u81EA\u52D5\u30EC\u30A4\u30A2\u30A6\u30C8
 automatic_layout_disabled=\u3057\u306A\u3044
 automatically_save_message=\u30DE\u30C3\u30D7\u306F\u81EA\u52D5\u4FDD\u5B58\u3055\u308C\u307E\u3057\u305F\u3002 (\u30D5\u30A1\u30A4\u30EB\u540D\uFF1A {0}) ...
 AutomaticEdgeColor.FOR_BRANCHES=\u679D\u3054\u3068
+AutomaticEdgeColor.FOR_COLUMNS=\u5217\u3054\u3068
 AutomaticEdgeColor.FOR_LEVELS=\u968E\u5C64\u3054\u3068
 AutomaticEdgeColor.ON_BRANCH_CREATION=\u679D\u306E\u4F5C\u6210\u6642
 AutomaticEdgeColorHookAction.text=\u7DDA\u306E\u8272\u3092\u81EA\u52D5\u9078\u629E
