Squashed beta-1.5.8-pre02
commit 9ecc9c75c7b6a78d60a69936d105470dc9542c9b
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Apr 16 17:46:36 2016 +0200

    Update mnemonicsetter and apply it also to menubar

commit c365f5f00b0a69a977598b3c6729dbc1eb0cd860
Author: Dimitry Polivaev <dimitry.polivaev@mercateo.com>
Date:   Sat Apr 16 15:37:20 2016 +0200

    Do not try to select invisible nodes

commit c446618666121ff0a3756d559cf16b8a558c639b
Author: Dimitry Polivaev <dimitry.polivaev@mercateo.com>
Date:   Sat Apr 16 15:30:35 2016 +0200

    Fix class cast exception

commit 6f798c991511ce99f5da0beebc873373e9a957df
Author: Dimitry Polivaev <dimitry.polivaev@mercateo.com>
Date:   Sat Apr 16 15:15:48 2016 +0200

    Fix new summary node check if one node is ancestor of the other one

commit 7bb2564df859d5eb5fafe2bed1ddfead71b108cb
Author: Dimitry Polivaev <dimitry.polivaev@mercateo.com>
Date:   Sat Apr 16 15:08:32 2016 +0200

    Fix NPE

commit 1d1c15618a1574d64b48702e87c837b91ee45a24
Author: Dimitry Polivaev <dimitry.polivaev@mercateo.com>
Date:   Sat Apr 16 12:06:39 2016 +0200

    permissions.add(new PropertyPermission("*", "read,write")); if (pWithoutWriteRestriction) permissions.add(new RuntimePermission("preferences"));

commit c233d28174299c9275b4ab2d8a0cbe0493e35c3c
Author: Felix Natter <fnatter@gmx.net>
Date:   Thu Apr 14 22:21:36 2016 +0200

    use SimplyHTML-0.16.16, gnu-regexp no longer needed

commit 332a89f73fc76a1fde599a607bb971f1726db3b2
Merge: 6f8fe9f 25dc0ab
Author: Weblate <noreply@weblate.org>
Date:   Tue Apr 12 12:32:51 2016 +0200

    Merge remote-tracking branch 'origin/1.5.x' into 1.5.x

commit 6f8fe9f9d9900d819f98224db28f097040c98cb7
Author: Kristjan Räts <kristjanrats@gmail.com>
Date:   Mon Apr 11 13:52:33 2016 +0200

    Translated using Weblate (Estonian)

    Currently translated at 50.4% (974 of 1930 strings)

commit 25dc0abba03fa81b24a7091653ab8b7d5f948b4a
Author: Dimitry Polivaev <dimitry.polivaev@mercateo.com>
Date:   Tue Apr 12 12:

--- a/freeplane/resources/translations/Resources_et.properties
+++ b/freeplane/resources/translations/Resources_et.properties
@@ -142,7 +142,7 @@ EditAction.text=Redigeeri s\u00F5lme
 EditAttributesAction.text=Redigeeri omadusi
 EditFilterAction.text=Redigeeri
 EditLongAction.text=Redigeeri s\u00F5lme tuuma aknas
-EncryptedMap.text=Loo kr\u00FCpteeritud kaart ...
+EncryptedMap.text=Loo kaitstud (kr\u00FCpteeritud) kaart ...
 EncryptedMap.tooltip=Loo uus kr\u00FCpteeritud kaart
 enter_base_url=Ma lisan viited suhteliste aadressidena. Palun sisesta p\u00F5hiaadress.
 enter_confirms=&Enter kinnitab
@@ -200,7 +200,7 @@ FoldAllAction.text=Voldi k\u00F5ik kokku
 FoldAllAction.tooltip=<html>Voldib valitud s\u00F5lmed ja nende all olevad s\u00F5lmed kokku.</html>
 FoldOneLevelAction.text=Voldi \u00FChe taseme v\u00F5rra kokku
 FoldOneLevelAction.tooltip=<html>Voldib valitud s\u00F5lmed \u00FChe taseme v\u00F5rra kokku.</html>
-follow_graphical_link=Mine:
+follow_graphical_link=Mine "{0}"
 FollowLinkAction.text=Ava h\u00FCperviide
 font=Kirjat\u00FC\u00FCp
 FontFamilyAction.text=kirja perekond
@@ -329,9 +329,9 @@ import_linked_branch_no_link=Valitud s\u00F5lmel ei ole \u00FChtki viidet import
 ImportAction.text=Impordi
 ImportBranchAction.text=Haru...
 ImportExplorerFavoritesAction.text=MS Internet Explorer-i viited...
-ImportFolderStructureAction.text=Kataloogide struktuur...
+ImportFolderStructureAction.text=Kaustade struktuur...
 ImportLinkedBranchAction.text=Viidatud haru
-ImportLinkedBranchWithoutRootAction.text=(Viidatud haru) ilma juurkataloogita...
+ImportLinkedBranchWithoutRootAction.text=Viidatud haru juureta...
 ImportMindmanagerFiles.text=MindManager X5 kaart...
 increase_branch_font_size=Suurem haru kirja
 IncreaseNodeFontAction.text=Suurem haru kirja
@@ -375,7 +375,7 @@ new_mindmap=Uus m\u00F5ttekaart
 new_node=Uus s\u00F5lm
 new_node_as_sibling_not_possible_for_the_root=Uus sama taseme s\u00F5lm ei ole peas\u00F5lmega v\u00F5imalik
 NewChildAction.text=Uus s\u00F5lm olemasoleva s\u00F5lme alla
-NewMapAction.text=Uus
+NewMapAction.text=Uus kaart
 NewParentNode.text=Uus peas\u00F5lm
 NewParentNode.tooltip=<html>K\u00F5ik valitud saadeti uueks peas\u00F5lmeks.</html>
 NewPreviousSiblingAction.text=Uus s\u00F5lm vasakule poole peas\u00F5lme alla
@@ -404,7 +404,7 @@ normal=Tavaline
 not_saved_for_link_error=Kaart tuleb enne failivalijale lingi m\u00E4\u00E4ramist salvestada
 ok=&Sobib
 OKAction.text=Sobib
-OpenAction.text=Ava...
+OpenAction.text=Ava salvestatud kaart...
 OpenFreeplaneSiteAction.text=Freeplane-i koduleht
 option_changes_may_require_restart=Muudetud seadistuste j\u00F5ustumiseks tuleb Freeplane taask\u00E4ivitada.
 OptionalDontShowMeAgainDialog.cancel=&Ei
@@ -638,8 +638,8 @@ OptionPanel.time_for_automatic_save=Automaatsalvestuse aeg
 OptionPanel.time_for_automatic_save.tooltip=<html> aeg kahe j\u00E4rjestiku salvestamise vahel (millisekundites, ms) : Et automaatsalvestamist keelata, m\u00E4\u00E4ra selleks numbriks 2000000000.</html>
 OptionPanel.time_for_delayed_selection=Aeg viivitusega valikuks
 OptionPanel.time_for_delayed_selection.tooltip=<html> S\u00F5lmede valiku viivitus hiire \u00FCleliikumisel (millisekundites). Muuda selle v\u00E4\u00E4rtus 1 peale kui soovid kohest (viivituseta) valikut hiire \u00FCle s\u00F5lme liikumisel.</html>
-OptionPanel.toolTipManager.max_tooltip_width=Kohtspikri laius
-OptionPanel.toolTipManager.max_tooltip_width.tooltip=<html>Vaikimisi kohtsprikri laius pikselites.</html>
+OptionPanel.toolTipManager.max_tooltip_width=Kohtspikri maksimaalne laius
+OptionPanel.toolTipManager.max_tooltip_width.tooltip=Maksimaalne kohtsprikri laius pikselites.
 OptionPanel.tr=TR (t\u00FCrgi keel)
 OptionPanel.uk_UA=Uk UA[translate me]
 OptionPanel.undefined_font=M\u00E4\u00E4ramata kirjakuju
@@ -717,7 +717,7 @@ PrintDirectAction.text=Tr\u00FCki
 printing_settings=Tr\u00FCkkimise skaleerimine
 PrintPreviewAction.text=Tr\u00FCkkimise eelvaatlus...
 PropertyAction.text=Eelistused ...
-QuitAction.text=Sulge programm
+QuitAction.text=Sulge Freeplane
 read_only=Ainult lugemiseks
 really_convert_to_current_version=<html>See kaart on vanema Freeplane-i abil loodud. <br>Kas teisendame uuemasse vormingusse (soovitatav)? <br>(Muidu v\u00F5etakse seda nagu see on ja ilma garantiita.) </html>
 really_cut_node=Kas t\u00F5esti l\u00F5igata s\u00F5lm(ed)?
@@ -739,10 +739,10 @@ replace=Asenda
 ResetNodeLocationAction.text=Taasta esialgne Paigutus
 save_failed={0} katse kaarti salvestada eba\u00F5nnestus.
 save_unsaved=Kas salvestada see m\u00F5ttekaart?
-SaveAction.text=Salvesta
-SaveAll.text=Salvesta K\u00F5ik
+SaveAction.text=&Salvesta
+SaveAll.text=Salvesta &k\u00F5ik avatud kaardid
 SaveAll.tooltip=Salvestab k\u00F5ik avatud kaardid
-SaveAsAction.text=Salvesta kui...
+SaveAsAction.text=Salvesta kaart k&ui...
 saved=Salvestatud
 scheme_evaluate=Hinda!
 ScriptEditor.text=Skripti redaktor...
@@ -750,7 +750,7 @@ ScriptEditor.tooltip=V\u00F5imaldab suuri skripte Freeplane-i sees kirjutada.
 ScriptEditorPanel.changed_cancel=Skripte on muudetud. Kas t\u00F5esti soovid loobuda neist muudatustest?
 select_favorites_folder=Vali kataloog kus asuvad Sinu j\u00E4rjehoidjad
 select_folder_for_importing=Vali kataloog, mida importida
-SelectAllAction.text=Vali k\u00F5ik n\u00E4htav
+SelectAllAction.text=Vali k\u00F5ik n\u00E4htavad s\u00F5lmed
 SelectBranchAction.text=Vali n\u00E4htav haru
 selection_method_by_click=\u00DCks kl\u00F5ps m\u00E4rkimiseks
 selection_method_delayed=Viivitusega automaatvalik
